--- a/css/style.css
+++ b/css/style.css
@@ -4931,6 +4931,7 @@ ul.head-menu{
       border-radius: 60px;
       z-index: 2
  } */
+ /* somtehtpsdfkjsdkf */
 
 .tabs li{
       padding-right: 47px;
